--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 
 <hr />
 
-<p><strong>Email:</strong> <a href="mailto:kvalheim@umich.edu">kvalheim@seas.upenn.edu</a></p>
+<p><strong>Email:</strong> <a href="mailto:kvalheim@umich.edu">kvalheim@umich.edu</a></p>
 
 <p>Here is my <strong><a href="assets/Kvalheim_CV.pdf">CV</a></strong>.</p>
 
 <hr />
 
-<p>I am a postdoctoral researcher in <a href="https://kodlab.seas.upenn.edu/">Kod*Lab</a> at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>. Starting in August 2022 I will be a postdoctoral Assistant Professor in the <a href="https://lsa.umich.edu/math">Department of Mathematics</a> at the <a href="http://umich.edu/">University of Michigan</a>. 
+<p>I am a postdoctoral Assistant Professor in the <a href="https://lsa.umich.edu/math">Department of Mathematics</a> at the <a href="http://umich.edu/">University of Michigan</a>. 
 My <strong><a href="https://mdkvalheim.github.io/research/">research</a></strong> interests are nonlinear systems in general, and in particular dynamics and control, geometry and topology, and stochastic processes.</p>
 
 <hr />
@@ -95,8 +95,8 @@ My <strong><a href="https://mdkvalheim.github.io/research/">research</a></strong
 <h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
 
 <ul>
-  <li><a href="/~kvalheim/assets/cornell-2-21-2022.pdf">Slides</a> from a talk at the Cornell <a href="https://pi.math.cornell.edu/m/event-list-p/probsem">Probability Seminar</a>. <strong>Topic</strong>: “flux” in small-noise dynamical systems.</li>
-  <li>(<a href="https://umich.zoom.us/rec/play/53AX3m9P7RWYUdSZw0MJ3kjkpKPj5YOTf-W6A2KpwZ8Qq4nSoq4Uey315SkwhW80TxF-7_Eb6hbOlZFr.I5OusFI6VW60OQ-q?startTime=1644005985000">Video</a>, <a href="/~kvalheim/assets/umich-2-4-2022.pdf">slides</a>) from a talk at the U Michigan <a href="https://ece.engin.umich.edu/event/when-can-hybrid-systems-operate-safely">Control Seminar</a>. <strong>Topic</strong>: topological approaches to the stabilizability/safety problems in control theory.</li>
+  <li><a href="/assets/cornell-2-21-2022.pdf">Slides</a> from a talk at the Cornell <a href="https://pi.math.cornell.edu/m/event-list-p/probsem">Probability Seminar</a>. <strong>Topic</strong>: “flux” in small-noise dynamical systems.</li>
+  <li>(<a href="https://umich.zoom.us/rec/play/53AX3m9P7RWYUdSZw0MJ3kjkpKPj5YOTf-W6A2KpwZ8Qq4nSoq4Uey315SkwhW80TxF-7_Eb6hbOlZFr.I5OusFI6VW60OQ-q?startTime=1644005985000">Video</a>, <a href="/assets/umich-2-4-2022.pdf">slides</a>) from a talk at the U Michigan <a href="https://ece.engin.umich.edu/event/when-can-hybrid-systems-operate-safely">Control Seminar</a>. <strong>Topic</strong>: topological approaches to the stabilizability/safety problems in control theory.</li>
   <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA">Video</a> from a talk at the Rutgers <a href="http://robotics.cs.rutgers.edu/data-inspire/">TRIPODS/DATA-INSPIRE institute</a>. <strong>Topic</strong>: Conley’s fundamental theorem for “hybrid” dynamical systems.</li>
 </ul>
 
