--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/mdkvalheim.github.io/public/css/site.css">
-  <!-- <link rel="stylesheet" href="/mdkvalheim.github.io/public/css/syntax.css"> -->
+  <link rel="stylesheet" href="/public/css/site.css">
+  <!-- <link rel="stylesheet" href="/public/css/syntax.css"> -->
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,700">
   <link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
 
   <!-- Icons -->
-  <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/mdkvalheim.github.io/public/apple-touch-icon-precomposed.png"> -->
-  <!-- <link rel="shortcut icon" href="/mdkvalheim.github.io/public/favicon.ico"> -->
+  <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-precomposed.png"> -->
+  <!-- <link rel="shortcut icon" href="/public/favicon.ico"> -->
 
 </head>
 
@@ -59,10 +59,10 @@
         <!-- Navbar -->
       <header class="masthead">
         <h3 class="masthead-title">
-          <a href="/mdkvalheim.github.io/" title="Home">Matthew Kvalheim</a>
+          <a href="/" title="Home">Matthew Kvalheim</a>
           
             &nbsp;&nbsp;&nbsp;
-            <small><a style = "padding-left: 2em" href="/mdkvalheim.github.io/research">Research</a></small>
+            <small><a style = "padding-left: 2em" href="/research">Research</a></small>
           
         </h3>
       </header>
