--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <hr />
 
 <p>I am a postdoctoral Assistant Professor in the <a href="https://lsa.umich.edu/math">Department of Mathematics</a> at the <a href="http://umich.edu/">University of Michigan</a>. 
-My <strong><a href="https://mdkvalheim.github.io/research/">research</a></strong> interests are nonlinear systems in general, and in particular dynamics and control, geometry and topology, and stochastic processes.</p>
+My <strong><a href="https://mdkvalheim.github.io/research/">research</a></strong> interests are nonlinear systems in general and, in particular, dynamics and control, geometry and topology, and stochastic processes.</p>
 
 <hr />
 
