--- a/research/index.html
+++ b/research/index.html
@@ -79,16 +79,13 @@
 
 <p>I like to think about interesting mathematical problems arising from those in the physical universe.</p>
 
-<p>My research interests are nonlinear systems in general, and in particular dynamics and control, geometry and topology, and stochastic processes.</p>
+<p>My research interests are nonlinear systems in general and, in particular, dynamics and control, geometry and topology, and stochastic processes.</p>
 
 <p>Specific topics related to my work: the feedback stabilization problem in control theory, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, and geometric mechanics.</p>
 
 <hr />
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
 <ul>
-  <li><strong>A generalization of the Hopf degree theorem</strong>.
-  Matthew D. Kvalheim.
-  Proceedings of the American Mathematical Society, Accepted (2022). (<a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
   <li><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.
  Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.
  IEEE Robotics and Automation Letters, Accepted (2022). (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</li>
@@ -114,8 +111,10 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
 
 <hr />
 <h2 id="submitted-journal-papers-and-selected-other-preprints">Submitted journal papers and selected other preprints:</h2>
-
 <ul>
+  <li><strong>A generalization of the Hopf degree theorem</strong>.
+  Matthew D. Kvalheim.
+  (2022). (<a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
   <li><strong>Obstructions to asymptotic stabilization</strong>.
   Matthew D. Kvalheim.
   (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
