--- a/research/index.html
+++ b/research/index.html
@@ -77,9 +77,7 @@
 
 <hr />
 
-<p>I like to think about interesting mathematical problems arising from those in the physical universe.</p>
-
-<p>My research interests are nonlinear systems in general and, in particular, dynamics and control, geometry and topology, and stochastic processes.</p>
+<p>My research interests are nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
 
 <p>Specific topics related to my work: the feedback stabilization problem in control theory, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, and geometric mechanics.</p>
 
