--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 
 <hr />
 
-<p><strong>Email:</strong> <a href="mailto:kvalheim@umich.edu">kvalheim@umich.edu</a></p>
+<p><a href="mailto:kvalheim@umich.edu">kvalheim@umich.edu</a></p>
 
-<p>Here is my <strong><a href="assets/Kvalheim_CV.pdf">CV</a></strong>.</p>
+<p><a href="assets/Kvalheim_CV.pdf">My CV</a></p>
 
 <hr />
 
 <p>I am an Assistant Professor in the <a href="https://lsa.umich.edu/math">Department of Mathematics</a> at the <a href="http://umich.edu/">University of Michigan</a>. 
-My <strong><a href="https://mdkvalheim.github.io/research/">research</a></strong> interests concern nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
+My <a href="https://mdkvalheim.github.io/research/">research</a> interests concern nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
 
 <hr />
 
