--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
 <hr />
 
-<p><a href="mailto:kvalheim@umich.edu">kvalheim@umich.edu</a></p>
+<p>Email: <a href="mailto:kvalheim@umich.edu">kvalheim@umich.edu</a></p>
 
-<p><a href="assets/Kvalheim_CV.pdf">My CV</a></p>
+<p>My CV: <a href="assets/Kvalheim_CV.pdf">link</a></p>
 
 <hr />
 
