--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@ My <a href="https://mdkvalheim.github.io/research/">research</a> interests conce
 <h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
 
 <ul>
-  <li><a href="/assets/cornell-2-21-2022.pdf">Slides</a> from a talk at the Cornell <a href="https://pi.math.cornell.edu/m/event-list-p/probsem">Probability Seminar</a>. <strong>Topic</strong>: “flux” in small-noise dynamical systems.</li>
-  <li><a href="/assets/umich-2-4-2022.pdf">Slides</a> from a talk at the U Michigan <a href="https://ece.engin.umich.edu/event/when-can-hybrid-systems-operate-safely">Control Seminar</a>. <strong>Topic</strong>: topological approaches to the stabilizability/safety problems in control theory.</li>
-  <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA">Video</a> from a talk at the Rutgers <a href="http://robotics.cs.rutgers.edu/data-inspire/">TRIPODS/DATA-INSPIRE institute</a>. <strong>Topic</strong>: Conley’s fundamental theorem for “hybrid” dynamical systems.</li>
+  <li><a href="/assets/cornell-2-21-2022.pdf">Slides</a> from a talk at the Cornell <a href="https://pi.math.cornell.edu/m/event-list-p/probsem">Probability Seminar</a>. Topic: “flux” in small-noise dynamical systems.</li>
+  <li><a href="/assets/umich-2-4-2022.pdf">Slides</a> from a talk at the U Michigan <a href="https://ece.engin.umich.edu/event/when-can-hybrid-systems-operate-safely">Control Seminar</a>. Topic: topological approaches to the stabilizability/safety problems in control theory.</li>
+  <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA">Video</a> from a talk at the Rutgers <a href="http://robotics.cs.rutgers.edu/data-inspire/">TRIPODS/DATA-INSPIRE institute</a>. Topic: Conley’s fundamental theorem for “hybrid” dynamical systems.</li>
 </ul>
 
 
