--- a/research/index.html
+++ b/research/index.html
@@ -84,6 +84,9 @@
 <hr />
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
 <ul>
+  <li><strong>A generalization of the Hopf degree theorem</strong>.
+  Matthew D. Kvalheim.
+  Proceedings of the American Mathematical Society, Accepted (2022). (<a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
   <li><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.
  Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.
  IEEE Robotics and Automation Letters, Accepted (2022). (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</li>
@@ -110,9 +113,6 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
 <hr />
 <h2 id="submitted-journal-papers-and-selected-other-preprints">Submitted journal papers and selected other preprints:</h2>
 <ul>
-  <li><strong>A generalization of the Hopf degree theorem</strong>.
-  Matthew D. Kvalheim.
-  (2022). (<a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
   <li><strong>Obstructions to asymptotic stabilization</strong>.
   Matthew D. Kvalheim.
   (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
