--- a/research/index.html
+++ b/research/index.html
@@ -84,52 +84,52 @@
 <hr />
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
 <ul>
-  <li><strong>A generalization of the Hopf degree theorem</strong>.
-  Matthew D. Kvalheim.
+  <li><strong>A generalization of the Hopf degree theorem</strong>.<br />
+  Matthew D. Kvalheim.<br />
   Proceedings of the American Mathematical Society, Accepted (2022). (<a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
-  <li><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.
- Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.
+  <li><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
+ Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.<br />
  IEEE Robotics and Automation Letters, Accepted (2022). (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</li>
-  <li><strong>Necessary conditions for feedback stabilization and safety</strong>.
- Matthew D. Kvalheim and Daniel E. Koditschek.
+  <li><strong>Necessary conditions for feedback stabilization and safety</strong>.<br />
+ Matthew D. Kvalheim and Daniel E. Koditschek.<br />
  Journal of Geometric Mechanics, Accepted (2022). (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013">article</a>, <a href="https://arxiv.org/abs/2106.00215">arXiv</a>)</li>
-  <li><strong>Existence and uniqueness of global Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.
- Matthew D. Kvalheim and Shai Revzen.
+  <li><strong>Existence and uniqueness of global Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
+ Matthew D. Kvalheim and Shai Revzen.<br />
  Physica D, 425 (2021), pp. 132959. (<a href="https://www.sciencedirect.com/science/article/pii/S0167278921001160">article</a>, <a href="https://arxiv.org/abs/1911.11996">arXiv</a>)</li>
-  <li><strong>Families of periodic orbits: closed 1-forms and global continuability</strong>.
- Matthew D. Kvalheim and Anthony M. Bloch.
+  <li><strong>Families of periodic orbits: closed 1-forms and global continuability</strong>.<br />
+ Matthew D. Kvalheim and Anthony M. Bloch.<br />
  Journal of Differential Equations, 285 (2021), pp. 211-257. (<a href="https://www.sciencedirect.com/science/article/abs/pii/S0022039621001601">article</a>, <a href="https://arxiv.org/abs/1906.03528">arXiv</a>)</li>
-  <li><strong>Conley’s fundamental theorem for a class of hybrid systems</strong>.
- Matthew D. Kvalheim, Paul Gustafson, and Daniel E. Koditschek.
+  <li><strong>Conley’s fundamental theorem for a class of hybrid systems</strong>.<br />
+ Matthew D. Kvalheim, Paul Gustafson, and Daniel E. Koditschek.<br />
  SIAM Journal on Applied Dynamical systems, 20.2 (2021), pp. 784-825. (<a href="https://epubs.siam.org/doi/abs/10.1137/20M1336576">article</a>, <a href="https://arxiv.org/abs/2005.03217">arXiv</a>)</li>
-  <li><strong>Gait modeling and optimization for the perturbed Stokes regime</strong>.
-Matthew D. Kvalheim, Brian Bittner, and Shai Revzen.
+  <li><strong>Gait modeling and optimization for the perturbed Stokes regime</strong>.<br />
+Matthew D. Kvalheim, Brian Bittner, and Shai Revzen.<br />
 Nonlinear Dynamics, 97.4 (2019), pp. 2249-2270. (<a href="https://link.springer.com/article/10.1007/s11071-019-05121-3">article</a>, <a href="https://arxiv.org/abs/1906.04384">arXiv</a>)</li>
-  <li><strong>Global linearization and fiber bundle structure of invariant manifolds</strong>.
-Jaap Eldering, Matthew D. Kvalheim, and Shai Revzen.
+  <li><strong>Global linearization and fiber bundle structure of invariant manifolds</strong>.<br />
+Jaap Eldering, Matthew D. Kvalheim, and Shai Revzen.<br />
 Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/article/10.1088/1361-6544/aaca8d">article</a>, <a href="https://arxiv.org/abs/1711.03646">arXiv</a>)</li>
 </ul>
 
 <hr />
 <h2 id="submitted-journal-papers-and-selected-other-preprints">Submitted journal papers and selected other preprints:</h2>
 <ul>
-  <li><strong>Obstructions to asymptotic stabilization</strong>.
-  Matthew D. Kvalheim.
+  <li><strong>Obstructions to asymptotic stabilization</strong>.<br />
+  Matthew D. Kvalheim.<br />
   (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
-  <li><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.
-  Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.
+  <li><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
+  Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
   (2022). (<a href="https://arxiv.org/abs/2203.04498">arxiv</a>)</li>
-  <li><strong>Phase response curves and the role of coordinates</strong>.
- Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.
+  <li><strong>Phase response curves and the role of coordinates</strong>.<br />
+ Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
  (2021). (<a href="https://arxiv.org/abs/2111.06511">arXiv</a>)</li>
-  <li><strong>A pasting lemma for Lipschitz functions</strong>.
- Matthew D. Kvalheim, Paul Gustafson, and Samuel A. Burden.
+  <li><strong>A pasting lemma for Lipschitz functions</strong>.<br />
+ Matthew D. Kvalheim, Paul Gustafson, and Samuel A. Burden.<br />
  (2021). (<a href="https://arxiv.org/abs/2109.08209">arXiv</a>)</li>
-  <li><strong>Poincaré-Hopf theorem for hybrid systems</strong>.
- Matthew D. Kvalheim.
+  <li><strong>Poincaré-Hopf theorem for hybrid systems</strong>.<br />
+ Matthew D. Kvalheim.<br />
  (2021). (<a href="https://arxiv.org/abs/2108.07434">arXiv</a>)</li>
-  <li><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.
- Yuliy Baryshnikov and Matthew D. Kvalheim.
+  <li><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
+ Yuliy Baryshnikov and Matthew D. Kvalheim.<br />
  (2021). (<a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
 </ul>
 
@@ -137,14 +137,14 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
 <h2 id="peer-reviewed-conference-papers">Peer-reviewed conference papers:</h2>
 
 <ul>
-  <li><strong>Generic properties of Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.
- Matthew D. Kvalheim, David Hong, and Shai Revzen.
- IFAC-PapersOnline, 54.9 (2021), pp. 267-272. (<a href="https://www.sciencedirect.com/science/article/pii/S2405896321006443">article</a>, <a href="https://arxiv.org/abs/2010.04008">arXiv</a>) 
+  <li><strong>Generic properties of Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
+ Matthew D. Kvalheim, David Hong, and Shai Revzen.<br />
+ IFAC-PapersOnline, 54.9 (2021), pp. 267-272. (<a href="https://www.sciencedirect.com/science/article/pii/S2405896321006443">article</a>, <a href="https://arxiv.org/abs/2010.04008">arXiv</a>)<br />
 <!--* **Reverse-engineering invariant manifolds with asymptotic phase**,
 with Shai Revzen,
 (2016). ([arXiv][3])--></li>
-  <li><strong>Data-driven models of legged locomotion</strong>.
-Shai Revzen and Matthew D. Kvalheim.
+  <li><strong>Data-driven models of legged locomotion</strong>.<br />
+Shai Revzen and Matthew D. Kvalheim.<br />
 SPIE Defense + Security, International Society for Optics and Photonics (2015). (<a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/9467/94671V/Data-driven-models-of-legged-locomotion/10.1117/12.2178007.short">article</a>)</li>
 </ul>
 
@@ -152,11 +152,11 @@ SPIE Defense + Security, International Society for Optics and Photonics (2015). 
 <h2 id="book-chapters">Book chapters:</h2>
 
 <ul>
-  <li><strong>Templates and anchors</strong>.
-Matthew D. Kvalheim and Shai Revzen.
+  <li><strong>Templates and anchors</strong>.<br />
+Matthew D. Kvalheim and Shai Revzen.<br />
 Bioinspired legged locomotion, Ch. 3.2, Butterworth-Heinemann, Elsevier, Oxford (2017). (<a href="https://www.sciencedirect.com/book/9780128037669/bioinspired-legged-locomotion">link</a>)</li>
-  <li><strong>Locomotion as an oscillator</strong>.
-Shai Revzen and Matthew D. Kvalheim.
+  <li><strong>Locomotion as an oscillator</strong>.<br />
+Shai Revzen and Matthew D. Kvalheim.<br />
 Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford (2017). (<a href="https://www.sciencedirect.com/book/9780128037669/bioinspired-legged-locomotion">link</a>)</li>
 </ul>
 
