--- a/research/index.html
+++ b/research/index.html
@@ -77,7 +77,7 @@
 
 <hr />
 
-<p>My research interests concern nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
+<p>My research interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
 
 <p>Specific topics related to my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, and geometric mechanics.</p>
 
