--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 <hr />
 
 <p>I am a postdoctoral assistant professor in the Department of Mathematics at the University of Michigan. 
-My <a href="https://mdkvalheim.github.io/research/">research</a> interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
+My <a href="https://mdkvalheim.github.io/research/">research</a> interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.
+This Fall 20222 semester I am teaching two course sections of calculus I (Math 115).</p>
 
 <hr />
 
