--- a/research/index.html
+++ b/research/index.html
@@ -92,7 +92,7 @@
  IEEE Robotics and Automation Letters, Accepted (2022). (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</li>
   <li><strong>Necessary conditions for feedback stabilization and safety</strong>.<br />
  Matthew D. Kvalheim and Daniel E. Koditschek.<br />
- Journal of Geometric Mechanics, Accepted (2022). (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013">article</a>, <a href="https://arxiv.org/abs/2106.00215">arXiv</a>)</li>
+ Journal of Geometric Mechanics, 14.4 (2022), pp. 659-693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013">article</a>, <a href="https://arxiv.org/abs/2106.00215">arXiv</a>)</li>
   <li><strong>Existence and uniqueness of global Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
  Matthew D. Kvalheim and Shai Revzen.<br />
  Physica D, 425 (2021), pp. 132959. (<a href="https://www.sciencedirect.com/science/article/pii/S0167278921001160">article</a>, <a href="https://arxiv.org/abs/1911.11996">arXiv</a>)</li>
