--- a/research/index.html
+++ b/research/index.html
@@ -89,7 +89,7 @@
   Proceedings of the American Mathematical Society, Accepted (2022). (<a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
   <li><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
  Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.<br />
- IEEE Robotics and Automation Letters, Accepted (2022). (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</li>
+ IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861-8868. (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</li>
   <li><strong>Necessary conditions for feedback stabilization and safety</strong>.<br />
  Matthew D. Kvalheim and Daniel E. Koditschek.<br />
  Journal of Geometric Mechanics, 14.4 (2022), pp. 659-693. (<a href="https://www.aimsciences.org/article/doi/10.3934/jgm.2022013">article</a>, <a href="https://arxiv.org/abs/2106.00215">arXiv</a>)</li>
