--- a/research/index.html
+++ b/research/index.html
@@ -111,8 +111,12 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
 </ul>
 
 <hr />
-<h2 id="submitted-journal-papers-and-selected-other-preprints">Submitted journal papers and selected other preprints:</h2>
+<h2 id="submitted-papers-and-selected-other-preprints">Submitted papers and selected other preprints:</h2>
 <ul>
+  <li><strong>The role of symmetry in constructing geometric flat outputs for
+  free-flying robotic systems</strong>.<br />
+  Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
+  (2022). (<a href="https://arxiv.org/abs/2209.11869">arxiv</a>)</li>
   <li><strong>Obstructions to asymptotic stabilization</strong>.<br />
   Matthew D. Kvalheim.<br />
   (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
