--- a/research/index.html
+++ b/research/index.html
@@ -79,7 +79,7 @@
 
 <p>My research interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
 
-<p>Specific topics related to my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, differential flatness, and geometric mechanics.</p>
+<p>Specific topics related to my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, differential flatness, geometric mechanics, and hybrid systems.</p>
 
 <hr />
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
