--- a/research/index.html
+++ b/research/index.html
@@ -86,7 +86,7 @@
 <ul>
   <li><strong>A generalization of the Hopf degree theorem</strong>.<br />
   Matthew D. Kvalheim.<br />
-  Proceedings of the American Mathematical Society, Accepted (2022). (<a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
+  Proceedings of the American Mathematical Society, 151.1 (2023), pp. 453–454. (<a href="https://doi.org/10.1090/proc/16218">article</a>, <a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
   <li><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
  Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.<br />
  IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861-8868. (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</li>
