--- a/research/index.html
+++ b/research/index.html
@@ -84,6 +84,9 @@
 <hr />
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
 <ul>
+  <li><strong>Obstructions to asymptotic stabilization</strong>.<br />
+  Matthew D. Kvalheim.<br />
+  SIAM Journal on Control and Optimization, Accepted (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
   <li><strong>A generalization of the Hopf degree theorem</strong>.<br />
   Matthew D. Kvalheim.<br />
   Proceedings of the American Mathematical Society, 151.1 (2023), pp. 453–454. (<a href="https://doi.org/10.1090/proc/16218">article</a>, <a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
@@ -117,9 +120,6 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
   free-flying robotic systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
   (2022). (<a href="https://arxiv.org/abs/2209.11869">arxiv</a>)</li>
-  <li><strong>Obstructions to asymptotic stabilization</strong>.<br />
-  Matthew D. Kvalheim.<br />
-  (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
   <li><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
   (2022). (<a href="https://arxiv.org/abs/2203.04498">arxiv</a>)</li>
