--- a/research/index.html
+++ b/research/index.html
@@ -84,6 +84,9 @@
 <hr />
 <h2 id="published-or-accepted-journal-papers">Published or accepted journal papers:</h2>
 <ul>
+  <li><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
+ Yuliy Baryshnikov and Matthew D. Kvalheim.<br />
+ Communications in Mathematical Physics, Accepted (2022). (<a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
   <li><strong>Obstructions to asymptotic stabilization</strong>.<br />
   Matthew D. Kvalheim.<br />
   SIAM Journal on Control and Optimization, Accepted (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
@@ -132,9 +135,6 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
   <li><strong>Poincaré-Hopf theorem for hybrid systems</strong>.<br />
  Matthew D. Kvalheim.<br />
  (2021). (<a href="https://arxiv.org/abs/2108.07434">arXiv</a>)</li>
-  <li><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
- Yuliy Baryshnikov and Matthew D. Kvalheim.<br />
- (2021). (<a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
 </ul>
 
 <hr />
