--- a/research/index.html
+++ b/research/index.html
@@ -172,6 +172,7 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <hr />
 <h2 id="selected-talks">Selected talks:</h2>
 <ul>
+  <li>M. Kvalheim. “<em>Existence and uniqueness of Koopman eigenfunctions near stable equilibria and limit cycles.</em>” Invited talk, International Symposium on Nonlinear Theory and Its Applications (NOLTA 2022). Online.</li>
   <li>M. Kvalheim. “<em>Negative resistance in small-noise dynamics via persistent homology.</em>” Invited SysConTalk, Indian Institute of Technology Bombay (2022). Online.</li>
   <li>M. Kvalheim. “<em>Large deviations, persistent homology, and Brownian conductors with negative resistance.</em>” Invited talk, Cornell University Probability Seminar (2022). Online.</li>
   <li>M. Kvalheim. “<em>When can hybrid systems operate safely?</em>” Invited talk, University of Michigan Control Seminar (2022). Online. (<a href="https://umich.zoom.us/rec/play/53AX3m9P7RWYUdSZw0MJ3kjkpKPj5YOTf-W6A2KpwZ8Qq4nSoq4Uey315SkwhW80TxF-7_Eb6hbOlZFr.I5OusFI6VW60OQ-q?startTime=1644005985000">video</a>)</li>
