--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <p>I am a postdoctoral assistant professor in the Department of Mathematics at the University of Michigan. 
 My <a href="https://mdkvalheim.github.io/research/">research</a> interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.
-I am teaching two course sections of calculus I (Math 115) in Fall 2022.</p>
+I taught two sections of Calculus I (Math 115) in Fall 2022, and I am teaching two sections of Differential Equations (Math 316) in Winter 2023.</p>
 
 <hr />
 
