--- a/research/index.html
+++ b/research/index.html
@@ -117,30 +117,12 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
 </ul>
 
 <hr />
-<h2 id="submitted-papers-and-selected-other-preprints">Submitted papers and selected other preprints:</h2>
+<h2 id="published-or-accepted-peer-reviewed-conference-papers">Published or accepted peer-reviewed conference papers:</h2>
 <ul>
   <li><strong>The role of symmetry in constructing geometric flat outputs for
   free-flying robotic systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
   (2022). (<a href="https://arxiv.org/abs/2209.11869">arxiv</a>)</li>
-  <li><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
-  Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  (2022). (<a href="https://arxiv.org/abs/2203.04498">arxiv</a>)</li>
-  <li><strong>Phase response curves and the role of coordinates</strong>.<br />
- Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2021). (<a href="https://arxiv.org/abs/2111.06511">arXiv</a>)</li>
-  <li><strong>A pasting lemma for Lipschitz functions</strong>.<br />
- Matthew D. Kvalheim, Paul Gustafson, and Samuel A. Burden.<br />
- (2021). (<a href="https://arxiv.org/abs/2109.08209">arXiv</a>)</li>
-  <li><strong>Poincaré-Hopf theorem for hybrid systems</strong>.<br />
- Matthew D. Kvalheim.<br />
- (2021). (<a href="https://arxiv.org/abs/2108.07434">arXiv</a>)</li>
-</ul>
-
-<hr />
-<h2 id="peer-reviewed-conference-papers">Peer-reviewed conference papers:</h2>
-
-<ul>
   <li><strong>Generic properties of Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
  Matthew D. Kvalheim, David Hong, and Shai Revzen.<br />
  IFAC-PapersOnline, 54.9 (2021), pp. 267-272. (<a href="https://www.sciencedirect.com/science/article/pii/S2405896321006443">article</a>, <a href="https://arxiv.org/abs/2010.04008">arXiv</a>)<br />
@@ -154,7 +136,6 @@ SPIE Defense + Security, International Society for Optics and Photonics (2015). 
 
 <hr />
 <h2 id="book-chapters">Book chapters:</h2>
-
 <ul>
   <li><strong>Templates and anchors</strong>.<br />
 Matthew D. Kvalheim and Shai Revzen.<br />
@@ -162,6 +143,23 @@ Bioinspired legged locomotion, Ch. 3.2, Butterworth-Heinemann, Elsevier, Oxford 
   <li><strong>Locomotion as an oscillator</strong>.<br />
 Shai Revzen and Matthew D. Kvalheim.<br />
 Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford (2017). (<a href="https://www.sciencedirect.com/book/9780128037669/bioinspired-legged-locomotion">link</a>)</li>
+</ul>
+
+<hr />
+<h2 id="papers-under-review-and-selected-other-preprints">Papers under review and selected other preprints:</h2>
+<ul>
+  <li><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
+  Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
+  (2022). (<a href="https://arxiv.org/abs/2203.04498">arxiv</a>)</li>
+  <li><strong>Phase response curves and the role of coordinates</strong>.<br />
+ Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
+ (2021). (<a href="https://arxiv.org/abs/2111.06511">arXiv</a>)</li>
+  <li><strong>A pasting lemma for Lipschitz functions</strong>.<br />
+ Matthew D. Kvalheim, Paul Gustafson, and Samuel A. Burden.<br />
+ (2021). (<a href="https://arxiv.org/abs/2109.08209">arXiv</a>)</li>
+  <li><strong>Poincaré-Hopf theorem for hybrid systems</strong>.<br />
+ Matthew D. Kvalheim.<br />
+ (2021). (<a href="https://arxiv.org/abs/2108.07434">arXiv</a>)</li>
 </ul>
 
 <hr />
