--- a/research/index.html
+++ b/research/index.html
@@ -122,7 +122,7 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
   <li><strong>The role of symmetry in constructing geometric flat outputs for
   free-flying robotic systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  (2022). (<a href="https://arxiv.org/abs/2209.11869">arxiv</a>)</li>
+  IEEE International Conference on Robotics and Automation, Accepted (2023). (<a href="https://arxiv.org/abs/2209.11869">arxiv</a>)</li>
   <li><strong>Generic properties of Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
  Matthew D. Kvalheim, David Hong, and Shai Revzen.<br />
  IFAC-PapersOnline, 54.9 (2021), pp. 267-272. (<a href="https://www.sciencedirect.com/science/article/pii/S2405896321006443">article</a>, <a href="https://arxiv.org/abs/2010.04008">arXiv</a>)<br />
