--- a/research/index.html
+++ b/research/index.html
@@ -86,7 +86,7 @@
 <ul>
   <li><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
  Yuliy Baryshnikov and Matthew D. Kvalheim.<br />
- Communications in Mathematical Physics, Accepted (2022). (<a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
+ Communications in Mathematical Physics, Accepted (2022). (<a href="https://doi.org/10.1007/s00220-022-04622-4">article</a>, <a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
   <li><strong>Obstructions to asymptotic stabilization</strong>.<br />
   Matthew D. Kvalheim.<br />
   SIAM Journal on Control and Optimization, Accepted (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
