--- a/research/index.html
+++ b/research/index.html
@@ -89,10 +89,10 @@
  Communications in Mathematical Physics, Accepted (2022). (<a href="https://doi.org/10.1007/s00220-022-04622-4">article</a>, <a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
   <li><strong>Obstructions to asymptotic stabilization</strong>.<br />
   Matthew D. Kvalheim.<br />
-  SIAM Journal on Control and Optimization, Accepted (2022). (<a href="https://arxiv.org/abs/2205.07840">arxiv</a>)</li>
+  SIAM Journal on Control and Optimization, Accepted (2022). (<a href="https://arxiv.org/abs/2205.07840">arXiv</a>)</li>
   <li><strong>A generalization of the Hopf degree theorem</strong>.<br />
   Matthew D. Kvalheim.<br />
-  Proceedings of the American Mathematical Society, 151.1 (2023), pp. 453–454. (<a href="https://doi.org/10.1090/proc/16218">article</a>, <a href="https://arxiv.org/abs/2203.10371">arxiv</a>)</li>
+  Proceedings of the American Mathematical Society, 151.1 (2023), pp. 453–454. (<a href="https://doi.org/10.1090/proc/16218">article</a>, <a href="https://arxiv.org/abs/2203.10371">arXiv</a>)</li>
   <li><strong>Planning of obstacle-aided navigation for multi-legged robots using a sampling-based method over directed graphs</strong>.<br />
  Kaustav Chakraborty, Haodi Hu, Matthew D. Kvalheim, and Feifei Qian.<br />
  IEEE Robotics and Automation Letters, 7.4 (2022), pp. 8861-8868. (<a href="https://ieeexplore.ieee.org/document/9812503">article</a>)</li>
