--- a/research/index.html
+++ b/research/index.html
@@ -148,6 +148,9 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <hr />
 <h2 id="papers-under-review-and-selected-other-preprints">Papers under review and selected other preprints:</h2>
 <ul>
+  <li><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
+  Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
+  (2023). (<a href="https://arxiv.org/abs/2303.15535">arxiv</a>)</li>
   <li><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
   (2022). (<a href="https://arxiv.org/abs/2203.04498">arxiv</a>)</li>
