--- a/research/index.html
+++ b/research/index.html
@@ -86,10 +86,10 @@
 <ul>
   <li><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
  Yuliy Baryshnikov and Matthew D. Kvalheim.<br />
- Communications in Mathematical Physics, Accepted (2022). (<a href="https://doi.org/10.1007/s00220-022-04622-4">article</a>, <a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
+ Communications in Mathematical Physics, Accepted (2023). (<a href="https://doi.org/10.1007/s00220-022-04622-4">article</a>, <a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
   <li><strong>Obstructions to asymptotic stabilization</strong>.<br />
   Matthew D. Kvalheim.<br />
-  SIAM Journal on Control and Optimization, Accepted (2022). (<a href="https://arxiv.org/abs/2205.07840">arXiv</a>)</li>
+  SIAM Journal on Control and Optimization, 61.2 (2023), pp. 536–542. (<a href="https://doi.org/10.1137/22M1500113">article</a>, <a href="https://arxiv.org/abs/2205.07840">arXiv</a>)</li>
   <li><strong>A generalization of the Hopf degree theorem</strong>.<br />
   Matthew D. Kvalheim.<br />
   Proceedings of the American Mathematical Society, 151.1 (2023), pp. 453–454. (<a href="https://doi.org/10.1090/proc/16218">article</a>, <a href="https://arxiv.org/abs/2203.10371">arXiv</a>)</li>
