--- a/research/index.html
+++ b/research/index.html
@@ -148,6 +148,9 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <hr />
 <h2 id="papers-under-review-and-selected-other-preprints">Papers under review and selected other preprints:</h2>
 <ul>
+  <li><strong>Linearizability of flows by embeddings</strong>.<br />
+  Matthew D. Kvalheim and Philip Arathoon.<br />
+  (2023). (<a href="https://arxiv.org/abs/2305.18288">arxiv</a>)</li>
   <li><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
   (2023). (<a href="https://arxiv.org/abs/2303.15535">arxiv</a>)</li>
