--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@ I taught two sections of Calculus I (Math 115) in Fall 2022, and I am teaching t
 
 <h2 id="some-recent-presentation-materials">Some recent presentation materials:</h2>
 <ul>
-  <li><a href="/assets/NOLTA2022.pdf">Slides</a> from a talk at NOLTA2022. Topic: existence and uniqueness of Koopman eigenfunctions near stable equilibria and limit cycles.</li>
+  <li><a href="/assets/banff-2023.pdf">Slides</a> from a talk at the Banff workshop <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139">Geometry, Topology and Control System Design</a>. Topic: Asymptotic stabilizability and safe control.</li>
   <li><a href="/assets/cornell-2-21-2022.pdf">Slides</a> from a talk at the Cornell Probability Seminar. Topic: flux in small-noise dynamical systems.</li>
-  <li><a href="/assets/umich-2-4-2022.pdf">Slides</a> from a talk at the U Michigan Control Seminar. Topic: topological approaches to the stabilizability/safety problems in control theory.</li>
   <li><a href="https://www.youtube.com/watch?v=DEQcCCea_rA&amp;t=3644s&amp;ab_channel=DIMACSCCICADA">Video</a> from a talk at the Rutgers TRIPODS/DATA-INSPIRE institute. Topic: Conley’s fundamental theorem for hybrid dynamical systems.</li>
 </ul>
 
