--- a/research/index.html
+++ b/research/index.html
@@ -176,6 +176,7 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <hr />
 <h2 id="selected-talks">Selected talks:</h2>
 <ul>
+  <li>M. Kvalheim. “<em>Asymptotic stabilizability.</em>” Invited talk, <a href="https://www.birs.ca/events/2023/5-day-workshops/23w5139">BIRS workshop Geometry, Topology and Control System Design</a>. Banff, AB, Canada. (<a href="/assets/banff-2023.pdf">slides</a>)</li>
   <li>M. Kvalheim. “<em>Existence and uniqueness of Koopman eigenfunctions near stable equilibria and limit cycles.</em>” Invited talk, International Symposium on Nonlinear Theory and Its Applications (NOLTA 2022). Online. (<a href="/assets/NOLTA2022.pdf">slides</a>)</li>
   <li>M. Kvalheim. “<em>Negative resistance in small-noise dynamics via persistent homology.</em>” Invited SysConTalk, Indian Institute of Technology Bombay (2022). Online.</li>
   <li>M. Kvalheim. “<em>Large deviations, persistent homology, and Brownian conductors with negative resistance.</em>” Invited talk, Cornell University Probability Seminar (2022). Online.</li>
