--- a/research/index.html
+++ b/research/index.html
@@ -86,7 +86,7 @@
 <ul>
   <li><strong>A compositional approach to certifying the almost global asymptotic stability of cascade systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE Control Systems Letters, 7 (2023), pp. 1969-1974. (<a href="https://ieeexplore.ieee.org/document/10146374">article</a>, <a href="https://arxiv.org/abs/2303.15535">arxiv</a>)</li>
+  IEEE Control Systems Letters, 7 (2023), pp. 1969-1974. (<a href="https://doi.org/10.1109/LCSYS.2023.3284338">article</a>, <a href="https://arxiv.org/abs/2303.15535">arxiv</a>)</li>
   <li><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
  Yuliy Baryshnikov and Matthew D. Kvalheim.<br />
  Communications in Mathematical Physics, 400.2 (2023), pp. 853–930. (<a href="https://doi.org/10.1007/s00220-022-04622-4">article</a>, <a href="https://arxiv.org/abs/2108.06431">arXiv</a>)</li>
