--- a/research/index.html
+++ b/research/index.html
@@ -151,6 +151,9 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 <hr />
 <h2 id="papers-under-review-and-selected-other-preprints">Papers under review and selected other preprints:</h2>
 <ul>
+  <li><strong>Koopman embedding and super-linearization counterexamples with isolated equilibria</strong>.<br />
+  Philip Arathoon and Matthew D. Kvalheim.<br />
+  (2023). (<a href="https://arxiv.org/abs/2306.15126">arxiv</a>)</li>
   <li><strong>Linearizability of flows by embeddings</strong>.<br />
   Matthew D. Kvalheim and Philip Arathoon.<br />
   (2023). (<a href="https://arxiv.org/abs/2305.18288">arxiv</a>)</li>
