--- a/index.html
+++ b/index.html
@@ -79,15 +79,14 @@
 
 <hr />
 
-<p>Email: <a href="mailto:kvalheim@umich.edu">kvalheim@umich.edu</a></p>
+<p>Email: <a href="mailto:kvalheim@umbc.edu">kvalheim@umbc.edu</a></p>
 
 <p>My CV: <a href="assets/Kvalheim_CV.pdf">link</a></p>
 
 <hr />
 
-<p>I am a postdoctoral assistant professor in the Department of Mathematics at the University of Michigan. 
-My <a href="https://mdkvalheim.github.io/research/">research</a> interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.
-I taught two sections of Calculus I (Math 115) in Fall 2022 and two sections of Differential Equations (Math 316) in Winter 2023.</p>
+<p>I have accepted a position as Assistant Professor of Mathematics at the University of Maryland, Baltimore County starting Fall 2023. 
+My <a href="https://mdkvalheim.github.io/research/">research</a> interests include nonlinear systems in general, and in particular: dynamical systems, control theory, stochastic processes, and robotics.</p>
 
 <hr />
 
